objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>R1</fullName>
        <description>2019 HubSpot Marketing Automation</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active Lead - In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>R1 2020</fullName>
        <description>New lead process in 2020</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active Lead - In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACO_Participation__c</fullName>
        <label>ACO Participation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AAMC Collaborative Care Network, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Alliance of Ventura, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Clinical Services, PC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Central Georgia, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Coastal Georgia, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of DeKalb, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Eastern North Carolina, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Georgia, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Greater Augusta &amp; Statesboro, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Greater Houston, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Greater New York, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Green Mountains, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Maryland, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Maryland Primary Care, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Mississippi, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Mount Kisco, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of North Texas, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Northwest Florida, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Southeast Wisconsin, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of South Georgia, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Syracuse, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Texas, Inc.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of The Tri-Counties, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Western Georgia, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Options, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Organization of New England, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Organization of Puerto Rico, Inc.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Organization of the North Country, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Partners, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Healthcare Alliance, PC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_AN_Cases__c</fullName>
        <label>Annual AN Cases</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 10,000</fullName>
                </value>
                <value>
                    <fullName>10,001 - 25,000</fullName>
                </value>
                <value>
                    <fullName>25,001 - 50,000</fullName>
                </value>
                <value>
                    <fullName>50,001 - 100,000</fullName>
                </value>
                <value>
                    <fullName>More than 100,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_ED_Visits__c</fullName>
        <label>Annual ED Visits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 20,000</fullName>
                </value>
                <value>
                    <fullName>20,001 - 30,000</fullName>
                </value>
                <value>
                    <fullName>30,001 - 60,000</fullName>
                </value>
                <value>
                    <fullName>60,001 - 80,000</fullName>
                </value>
                <value>
                    <fullName>80,001 - 100,000</fullName>
                </value>
                <value>
                    <fullName>More than 100,000</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Hospitalist_Encounters__c</fullName>
        <label>Annual Hospitalist Encounters</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 10,000</fullName>
                </value>
                <value>
                    <fullName>10,001 - 25,000</fullName>
                </value>
                <value>
                    <fullName>25,001 - 50,000</fullName>
                </value>
                <value>
                    <fullName>50,001 - 100,000</fullName>
                </value>
                <value>
                    <fullName>More than 100,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_No_of_Transports__c</fullName>
        <label>Annual No. of Transports</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 5,000</fullName>
                </value>
                <value>
                    <fullName>5,000 - 9,999</fullName>
                </value>
                <value>
                    <fullName>10,000 - 19,999</fullName>
                </value>
                <value>
                    <fullName>20,000 - 49,999</fullName>
                </value>
                <value>
                    <fullName>50,000 - 99,999</fullName>
                </value>
                <value>
                    <fullName>100,000 - 149,999</fullName>
                </value>
                <value>
                    <fullName>More than 150,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointment_Meeting_Date__c</fullName>
        <label>Appointment / Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assistant_Name__c</fullName>
        <label>Assistant Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_Phone__c</fullName>
        <label>Assistant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <formula>IF(OR(Domain__c="yahoo.com",
Domain__c="gmail.com",
Domain__c="me.com",
Domain__c="outlook.com", 
Domain__c="icloud.com", 
Domain__c="inbox.com", 
Domain__c="mail.com", 
Domain__c="live.com",
Domain__c="msn.com",
Domain__c="att.net",
Domain__c="rr.com",
Domain__c="comcast.net",
Domain__c="aol.com"),false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Role__c</fullName>
        <description>Maps to Contact at conversion</description>
        <inlineHelpText>Buyer role in a complex sale. Economic buyer-ability to commit to funds for purchase. User Buyer will actually use our solution after the purchase decision is made. Technical Buyer-person who makes the purchase. Coach wants the solution to win.</inlineHelpText>
        <label>Buyer Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Economic Buyer</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>Gate Keeper</fullName>
                </value>
                <value>
                    <fullName>Purchasing Agent</fullName>
                </value>
                <value>
                    <fullName>Technical Buyer</fullName>
                </value>
                <value>
                    <fullName>User Buyer</fullName>
                </value>
                <value>
                    <fullName>Stakeholder</fullName>
                    <isActive>false</isActive>
                    <label>Stakeholder</label>
                </value>
                <value>
                    <fullName>Technical Influencer</fullName>
                    <isActive>false</isActive>
                    <label>Technical Influencer</label>
                </value>
                <value>
                    <fullName>User Buyer Influencer</fullName>
                    <isActive>false</isActive>
                    <label>User Buyer Influencer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Back_Requested_Date__c</fullName>
        <label>Call Back Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments_From_Offline_Import__c</fullName>
        <description>Comments from a manual data offline Import</description>
        <inlineHelpText>Comments from a manual data offline Import. Can be notes from sales or marketing or directly from the contact.</inlineHelpText>
        <label>Comments (From Offline Import)</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Comments_From_Forms_2__c</fullName>
        <description>Contact Comments from a Form. MAP forms will be designed to progressively profile two open text fields in order to prevent overwriting</description>
        <inlineHelpText>Contact comments exactly as submitted on a form</inlineHelpText>
        <label>Contact Comments (From Forms)</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Comments_From_Forms__c</fullName>
        <description>MAP will Progressive profile 2 form fields as to prevent overwriting</description>
        <inlineHelpText>Contact comments exactly as submitted on a form</inlineHelpText>
        <label>Contact Comments (From Forms)</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_ACO_Benefits__c</fullName>
        <label>Current ACO Benefits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Managed Care Contracts</fullName>
                </value>
                <value>
                    <fullName>Medicare Shared Savings</fullName>
                </value>
                <value>
                    <fullName>HMO Participation</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Group Purchasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_EMR__c</fullName>
        <label>Current EMR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AdvancedMD/ADP</fullName>
                </value>
                <value>
                    <fullName>AllScripts</fullName>
                </value>
                <value>
                    <fullName>Amazing Charts</fullName>
                </value>
                <value>
                    <fullName>Aprima</fullName>
                </value>
                <value>
                    <fullName>AthenaHealth</fullName>
                </value>
                <value>
                    <fullName>Azalea Health</fullName>
                </value>
                <value>
                    <fullName>Care360</fullName>
                </value>
                <value>
                    <fullName>CareCloud</fullName>
                </value>
                <value>
                    <fullName>Cerner Ambulatory</fullName>
                </value>
                <value>
                    <fullName>Chart Logic</fullName>
                </value>
                <value>
                    <fullName>Compugroup Medical (CPG)/Alteer</fullName>
                </value>
                <value>
                    <fullName>CureMD</fullName>
                </value>
                <value>
                    <fullName>Dr. Cloud</fullName>
                </value>
                <value>
                    <fullName>eClinicalWorks</fullName>
                </value>
                <value>
                    <fullName>E-MD</fullName>
                </value>
                <value>
                    <fullName>GE Centricity</fullName>
                </value>
                <value>
                    <fullName>Greenway</fullName>
                </value>
                <value>
                    <fullName>Kareo</fullName>
                </value>
                <value>
                    <fullName>Lytec</fullName>
                </value>
                <value>
                    <fullName>MacPractice</fullName>
                </value>
                <value>
                    <fullName>McKesson Lytec</fullName>
                </value>
                <value>
                    <fullName>Medical Manager</fullName>
                </value>
                <value>
                    <fullName>Medios</fullName>
                </value>
                <value>
                    <fullName>MediSoft</fullName>
                </value>
                <value>
                    <fullName>MediTab</fullName>
                </value>
                <value>
                    <fullName>Meditech</fullName>
                </value>
                <value>
                    <fullName>MediTouch</fullName>
                </value>
                <value>
                    <fullName>MedStar</fullName>
                </value>
                <value>
                    <fullName>Modernizing Medicine</fullName>
                </value>
                <value>
                    <fullName>NextGen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_PM_System__c</fullName>
        <label>Current PM System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AdvancedMD/ADP</fullName>
                </value>
                <value>
                    <fullName>AllScripts MyWay</fullName>
                </value>
                <value>
                    <fullName>AllScripts Pro</fullName>
                </value>
                <value>
                    <fullName>Amazing Charts</fullName>
                </value>
                <value>
                    <fullName>Aprima</fullName>
                </value>
                <value>
                    <fullName>AthenaHealth</fullName>
                </value>
                <value>
                    <fullName>Avisena</fullName>
                </value>
                <value>
                    <fullName>Azalea Health</fullName>
                </value>
                <value>
                    <fullName>Care360</fullName>
                </value>
                <value>
                    <fullName>CareCloud</fullName>
                </value>
                <value>
                    <fullName>Cerner Ambulatory</fullName>
                </value>
                <value>
                    <fullName>Chart Logic</fullName>
                </value>
                <value>
                    <fullName>Compugroup Medical (CPG)/Alteer</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>CureMD</fullName>
                </value>
                <value>
                    <fullName>Dr. Cloud</fullName>
                </value>
                <value>
                    <fullName>eClinicalWorks</fullName>
                </value>
                <value>
                    <fullName>E-MD</fullName>
                </value>
                <value>
                    <fullName>Emergency 911</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>GE Centricity</fullName>
                </value>
                <value>
                    <fullName>Greenway</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Kareo</fullName>
                </value>
                <value>
                    <fullName>Lytec</fullName>
                </value>
                <value>
                    <fullName>MacPractice</fullName>
                </value>
                <value>
                    <fullName>McKesson Lytec</fullName>
                </value>
                <value>
                    <fullName>Medical Manager</fullName>
                </value>
                <value>
                    <fullName>Medios</fullName>
                </value>
                <value>
                    <fullName>MediTab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Old_Before_Becoming_Sales_Accepted__c</fullName>
        <formula>IF(NOT(ISBLANK(Sales_Accepted_Lead_Date__c)),( Sales_Accepted_Lead_Date__c - DATEVALUE(CreatedDate)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales Accepted lead Date - Created Date</inlineHelpText>
        <label>Days Old Before Becoming Sales Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_as_Qualified_Lead__c</fullName>
        <formula>IF
(
NOT(ISBLANK(Qualified_Lead_End_Date__c)),
( Qualified_Lead_End_Date__c -  Qualified_Lead_Start_Date__c), 
(TODAY()-Qualified_Lead_Start_Date__c)
)</formula>
        <inlineHelpText>If "Qualified Lead End Date" is blank it'll calculate days as Qualified Lead using today's date.</inlineHelpText>
        <label>Days as Qualified Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_as_Sales_Qualified_Lead__c</fullName>
        <formula>IF
(
NOT(ISBLANK(Sales_Qualified_Lead_End_Date__c)),
( Sales_Qualified_Lead_End_Date__c - Sales_Qualified_Lead_Start_Date__c), 
(TODAY()-Sales_Qualified_Lead_Start_Date__c)
)</formula>
        <inlineHelpText>If "Sales Qualified Lead End Date" is blank it'll calculate days as Sales Qualified Lead using today's date.</inlineHelpText>
        <label>Days as Sales Qualified Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_as_Suspect_Lead__c</fullName>
        <formula>IF(NOT(ISBLANK(Suspect_Lead_End_Date__c)),( Suspect_Lead_End_Date__c -  Suspect_Lead_Start_Date__c), (TODAY()-Suspect_Lead_Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If "Suspect Lead End Date" is blank it'll calculate days as Suspect Lead using today's date.</inlineHelpText>
        <label>Days as Suspect Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>Trim(Mid(Email,find("@",Email,1)+1,50))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <formula>SUBSTITUTE( Email , LEFT(Email, FIND("@", Email)), NULL)</formula>
        <label>Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Score__c</fullName>
        <description>Score is based on last 120 days of engagement activity</description>
        <label>Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>no longer used as of 1/5/19</description>
        <label>zzzEvent Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zzzEvent Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Force_Parent_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Parent Lookup?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Functional_Role__c</fullName>
        <label>Functional Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case Manager</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>CMIO</fullName>
                </value>
                <value>
                    <fullName>CMO</fullName>
                </value>
                <value>
                    <fullName>CNO</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Director of Case Management</fullName>
                </value>
                <value>
                    <fullName>Fire / EMS Chief</fullName>
                </value>
                <value>
                    <fullName>PNL Owner</fullName>
                </value>
                <value>
                    <fullName>Practice Administrator</fullName>
                </value>
                <value>
                    <fullName>VP Finance</fullName>
                </value>
                <value>
                    <fullName>VP of Case Management</fullName>
                </value>
                <value>
                    <fullName>VP Rev Cycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funnel_Stage__c</fullName>
        <inlineHelpText>Defines the stage of the full funnel from Suspect, Qualified, Sales Qualified, Discover, Qualify, Execute, Propose and Close. Every prospect goes through the funnel in order and can not skip stages.</inlineHelpText>
        <label>Funnel Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Suspect Lead (SL)</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead (QL)</fullName>
                </value>
                <value>
                    <fullName>Sales Accepted Lead (SAL)</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified Lead (SQL)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funnel_Stage_for_Contact__c</fullName>
        <defaultValue>"Prospect"</defaultValue>
        <label>Funnel Stage for Contact</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Enterprise_Opp__c</fullName>
        <formula>Parent_Account__r.Has_Ent_Opp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Enterprise Opp?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical_Owner__c</fullName>
        <label>Historical Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hold_Email_Expiration__c</fullName>
        <label>Hold Email Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold_Marketing_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold Marketing Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hospital_Type__c</fullName>
        <label>Hospital Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ambulatory Surgery Center</fullName>
                </value>
                <value>
                    <fullName>Long-Term Acute Care (LTAC)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Rehabilitation Hospital</fullName>
                </value>
                <value>
                    <fullName>Short Term Acute Care Hospital</fullName>
                </value>
                <value>
                    <fullName>VA or Department of Defense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISO_3166_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A valid Country forces population of this linkage field for access to all Country related data fields</description>
        <label>ISO 3166 Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Import2_Id__c</fullName>
        <description>Id of the record in original system, where it was imported from by Import2.com</description>
        <externalId>true</externalId>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inside Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>InsideSales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsKeyProspect__c</fullName>
        <description>if</description>
        <formula>if(isblank(Key_Prospect__c),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsKeyProspect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Board of Directors / Trustees</fullName>
                </value>
                <value>
                    <fullName>Chief Exec / President / Administrator</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Counselor / Therapist</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Head of</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Medical Practitioner</fullName>
                </value>
                <value>
                    <fullName>Nurse / Nursing Executive</fullName>
                </value>
                <value>
                    <fullName>Owner / Partner</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Practice Administrator</fullName>
                </value>
                <value>
                    <fullName>Secretary / Treasurer</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Supervisor / Team Leader</fullName>
                </value>
                <value>
                    <fullName>VP / Managing Director</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Prospect__c</fullName>
        <label>Key Prospect</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Independent_Physicians</fullName>
                    <label>Independent Physicians</label>
                </value>
                <value>
                    <fullName>Employed Physicians</fullName>
                </value>
                <value>
                    <fullName>IDN Modular</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Optima</fullName>
                </value>
                <value>
                    <fullName>End to End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadConversionCheckbox__c</fullName>
        <formula>if(len(LastName)&gt;0,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadConversionCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_00000000__c</fullName>
        <displayFormat>Lead-{00000000}</displayFormat>
        <label>Lead #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Indicator__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Conversion Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Legacy_ID__c</fullName>
        <label>Lead Legacy ID</label>
        <type>TextArea</type>
    </fields>
</CustomObject>